# dynamixel_ct

./: .gitignore  CHANGELOG.md  Cargo.toml  readme.md
crates/dynamixel_ct/: Cargo.toml
crates/dynamixel_ct/examples/: multiple_models.rs
crates/dynamixel_ct/src/: control_table.rs  lib.rs  model_macro.rs  register.rs
crates/dynamixel_ct/src/models/: mod.rs  ph42_ph54_pm42_pm54.rs  xc330_xl330.rs  xc330_xl330_xm335.rs  xc430_xl430.rs  xd430_xh430_xm430.rs  xd540_xh540_xm540.rs  xw540.rs  ym070_ym080.rs
crates/dynamixel_registers/: Cargo.toml  readme.md
crates/dynamixel_registers/src/: error.rs  lib.rs  models.rs  registers.rs
crates/generate_control_tables/: Cargo.toml
crates/generate_control_tables/src/: generate.rs  main.rs  parse.rs
examples/: multiple_models.rs
generate_control_tables/: Cargo.toml
generate_control_tables/src/: main.rs
src/: control_table.rs  lib.rs  model_macro.rs  register.rs
src/models/: dynamic_model.rs  mod.rs  xm430.rs  ym.rs  ym070.rs
