[package]
name = "dynamixel_ct"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/omelia-iliffe/dynamixel_ct"
description = "A crate for working with the control tables of Dynamixel servos"

[features]
serde = ["dep:serde", "serde_repr", "strum"]

[dependencies]
derive_more = { version = "1.0.0", features = ["display", "error"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
regex = "1.11.1"
serde = { version = "1.0.215", optional = true, features = ["derive"] }
serde_repr = { version = "0.1.19" , optional = true }
strum = { version = "0.26", features = ["derive"], optional = true}

[dev-dependencies]
serde_json = "1.0.132"
toml = "0.8.19"
