[package]
name = "dynamixel_ct"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/omelia-iliffe/dynamixel_ct"
description = "A crate for working with the control tables of Dynamixel servos"

[features]
serde = ["dep:serde", "strum", "dynamixel_registers/serde"]
debug_full_ct = []

[dependencies]
dynamixel_registers.workspace = true
serde = { version = "1", optional = true, features = ["derive"] }
strum = { version = "0.26", features = ["derive"], optional = true}
derive_more = { version = "2" , features = ["debug"]}

[dev-dependencies]
serde_json = "1"
toml = "0.8.19"
