[package]
name = "dynamixel_ct"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "../../readme.md"
repository = "https://github.com/omelia-iliffe/dynamixel_ct"
description = "A crate for working with the control tables of Dynamixel servos"

[[example]]
name = "multiple_models"
required-features = ["std"]


[features]
default = ["std"]
std = []
serde = ["std", "dep:serde", "strum", "dynamixel_registers/serde"]
debug_full_ct = []

[dependencies]
dynamixel_registers = {path = "../dynamixel_registers", version = "0.3.0"}
serde = { version = "1", optional = true, features = ["derive"] }
strum = { version = "0.27", features = ["derive"], optional = true}
derive_more = { version = "2" , features = ["debug"]}
paste = "1.0.15"

[dev-dependencies]
serde_json = "1"
toml = "0.8.19"
