[package]
name = "dynamixel_ct"
version = "0.6.0"
edition = "2021"
license = "MIT"
readme = "../../readme.md"
repository = "https://github.com/omelia-iliffe/dynamixel_ct"
description = "A crate for working with the control tables of Dynamixel servos"

[[example]]
name = "multiple_models"
required-features = ["std"]


[features]
default = ["std"]
#std = ["derive_more/std", "strum/std", "serde/std"]
std = []
serde = ["std", "dep:strum", "dep:serde", "dynamixel_registers/serde"]
debug_full_ct = []

[dependencies]
dynamixel_registers = {workspace = true}
serde = { workspace = true, features = ["derive"], optional = true }
strum = { workspace = true, features = ["derive"], optional = true }
derive_more = { workspace = true, features = ["debug"] }
pastey = {version = "0.1.0"}


[dev-dependencies]
serde_json = "1"
toml = "0.8.19"
