[package]
name = "dynamixel_registers"
version = "0.1.0"
edition = "2021"

[dependencies]
num-derive = "0.4.2"
num-traits = { version = "0.2.19" }
serde = { version = "1", optional = true, features = ["derive"]}
derive_more = { version = "2", features = ["display", "error"]}
strum = {version = "0.27.1", features = ["strum_macros", "derive"], optional = true}
[features]
serde = ["dep:serde", "strum"]

[dev-dependencies]
serde_json = "1.0.132"
toml = "0.8.19"
