[package]
name = "dynamixel_registers"
version = "0.2.0"
edition = "2021"
readme = "readme.md"
license = "MIT"
repository = "https://github.com/omelia-iliffe/dynamixel_ct"
description = "The models and registers of Dynamixels supported by the dynamixel_ct crate"

[dependencies]
num-derive = "0.4"
num-traits = { version = "0.2" }
serde = { version = "1", optional = true, features = ["derive"]}
derive_more = { version = "2", features = ["display", "error"]}
strum = {version = "0.27.1", features = ["strum_macros", "derive"], optional = true}
[features]
default = ["std"]
std = []
serde = ["std", "dep:serde", "strum"]

[dev-dependencies]
serde_json = "1.0.132"
toml = "0.8.19"
