[package]
name = "dynamixel_registers"
version = "0.5.0"
edition = "2021"
readme = "readme.md"
license = "MIT"
repository = "https://github.com/omelia-iliffe/dynamixel_ct"
description = "The models and registers of Dynamixels supported by the dynamixel_ct crate"

[dependencies]
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
derive_more = { workspace = true, features = ["display", "error", "from"] }
serde = { workspace = true, optional = true, features = ["derive"] }
strum = { workspace = true, features = ["strum_macros", "derive"], optional = true }

[features]
default = ["std"]
#std = ["derive_more/std", "strum/std", "serde/std"]
std = []
serde = ["std", "dep:serde", "dep:strum", "serde/std", "strum/std"]

[dev-dependencies]
serde_json = "1.0.132"
toml = "0.8.19"
